k8s_loesungen/6_configmap_secret/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: qa6.k8s-schulung.viadee.cloud
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: demo-app
              port:
                number: 80
  tls:
    - secretName: tls-k8s-schulung-viadee-cloud
